[package]
name = "punks-standalone"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
punks-browser = { path = "../crates/punks-browser" }
punks-ui = { path = "../crates/punks-ui" }
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
wgpu = "25.0"
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
